--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+# Environment variables
+.env.local
+.env*. local
 
 # vercel
 .vercel
