--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.2",
+    "@clerk/shared": "^3.41.0",
     "@google/generative-ai": "^0.21.0",
     "@langchain/community": "^0.3.16",
     "@langchain/core": "^0.3.19",
